--- a/app/tbapp/package.json
+++ b/app/tbapp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "auth0-js": "^9.2.3",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -34,12 +35,14 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
     "react-popper": "^0.7.5",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-simple-auth": "^1.0.0",
     "reactstrap": "^5.0.0-alpha.4",
     "redux": "^3.7.2",
     "redux-form": "^7.2.1",
